# goldo_comm_uart

./: CMakeLists.txt  package.xml
libs/: CMakeLists.txt
libs/goldo_comm/: CMakeLists.txt  build_clang.bat  clang-toolchain.cmake
libs/goldo_comm/fuzzers/: CMakeLists.txt  fuzz_cobs.cpp  fuzz_comm.cpp  fuzz_message_queue.cpp  gen_messages.hpp
libs/goldo_comm/include/goldo_comm/: cobs_encoder.hpp  comm.hpp
libs/goldo_comm/src/: cobs_decoder.c  cobs_encoder.cpp  comm.cpp  msg_queue.cpp
libs/goldo_comm/tests/: CMakeLists.txt  fuzz_goldo_cobs.cpp  fuzz_goldo_cobs_decode.cpp  goldo_cobs_test.cpp  goldo_comm_msg_queue_test.cpp  test_cobs.cpp  test_cobs_decoder.cpp  test_comm.cpp  utest_circular_buffer.cpp  utest_cobs_encoder.cpp  utest_comm.cpp  utest_message_queue.cpp
msg/: RawMessage.msg
src/: goldo_comm_uart_node.cpp  serial_comm_hal.cpp  serial_comm_hal.hpp
